Updated Lab 7 to make it more clear